--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,14 @@
 .App {
   text-align: center;
 }
+.loading-gif{
+  text-align: center;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  color: #fff;
+  background-color: #000;
 }
 
 .App-header {
@@ -24,8 +22,48 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+table {
+  margin: auto;
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid white;
+  padding: 10px;
+}
+
+input {
+  margin: 1%;
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  background-color: #282c34;
+  color: #fff;
+  outline: none;
+}
+
+input::placeholder {
+  color: #7d7d7d;
+}
+
+button {
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  padding: 10px 15px;
+  transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
+}
+
+button:hover {
+  background-color: #050a08;
+  color: white;
+  border: 1px solid blue;
+}
+
+button:focus {
+  outline: none;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +73,37 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+table {
+  margin: auto;
+  width: 80%;
+}
+
+th, td {
+  border: 1px solid white;
+  padding: 10px;
+  text-align: center;
+}
+
+button {
+  box-sizing: border-box;
+  display: inline-block;
+}
+
+button:hover {
+  background-color: #050a08;
+  color: white;
+  border: 1px solid blue;
 }
